<resources>
    <string name="app_name">NavigationMenuUdemy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_home_fragment">This is Home fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_category_fragment">This is Category fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_profile_fragment">This is Profile fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Texto de inputs-->
    <string name="txt_field_price">Precio</string>
    <string name="txt_field_product_name">Nombre del producto</string>
    <string name="txt_field_category">Categoría</string>
    <string name="txt_field_stock">Stock</string>

    <!--Texto de inputs (errores)-->
    <string name="txt_field_empty_error">Debe llenar este campo.</string>
    <string name="txt_field_fill_error">Debe ingresar texto válido.</string>
    <string name="txt_field_stock_error">Supera el stock del producto.</string>

    <!--Texto de dialogs/alert-->
    <string name="txt_title_dialog_product">Crear nuevo producto</string>
    <string name="txt_snackbar_go">Ir</string>
    <string name="txt_snackbar_permission">Debe aceptar los permisos para poder acceder a las imágenes.</string>
    <string name="txt_alert_delete_product">Está seguro que desea eliminar este producto?</string>
    <string name="txt_alert_delete_sale">Está seguro que desea cancelar la venta?</string>

    <!--Texto de actividades-->
    <string name="txt_actionbar_title_detail">Detalle del producto</string>
    <string name="txt_actionbar_title_sale">Información de venta</string>

    <!--Texto Botones-->
    <string name="txt_btn_load_image">Cargar imagen</string>
    <string name="txt_btn_add_sale">Agregar a la venta</string>
    <string name="txt_btn_sell">Vender</string>
    <string name="txt_btn_update">Actualizar</string>
    <string name="txt_btn_cancel">Cancelar</string>
    <string name="txt_btn_edit">Editar</string>
    <string name="txt_btn_create">Crear</string>
    <string name="txt_btn_delete">Eliminar</string>
    <string name="txt_dialog_quantity_sale">Cuántas unidades desea?</string>
    <string name="txt_btn_continue_sale">Continuar con la venta</string>
    <string name="txt_sale_subtotal">Sub total</string>
    <string name="txt_btn_register_sale">Registrar venta</string>
    <string name="txt_btn_cancel_sale">Cancelar venta</string>
    <string name="score_sales">Ventas</string>
    <string name="score_total">Total</string>
    <string name="option_history_sale">Historial de ventas</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_category">Categorias</string>
    <string name="menu_profile">Perfil</string>


</resources>