<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.sale.SaleDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvIdSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Venta #001" />

        <TextView
            android:id="@+id/tvItemsCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/tvIdSale"
            app:layout_constraintTop_toBottomOf="@+id/tvIdSale"
            tools:text="2 productos" />

        <TextView
            android:id="@+id/tvEditSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/txt_btn_edit"
            app:layout_constraintBottom_toBottomOf="@+id/tvItemsCounter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvItemsCounter" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#BF2424"
            app:layout_constraintEnd_toEndOf="@+id/tvEditSale"
            app:layout_constraintStart_toStartOf="@+id/tvItemsCounter"
            app:layout_constraintTop_toBottomOf="@+id/tvItemsCounter" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSaleDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/rvSaleDescription"
            app:layout_constraintStart_toStartOf="@+id/rvSaleDescription"
            app:layout_constraintTop_toBottomOf="@+id/rvSaleDescription">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_sale_subtotal" />

            <TextView
                android:id="@+id/tvSubtotalSale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="S/. 140.00" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegisterSale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_btn_register_sale"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/btnCancelSale"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_cancel_sale"
            app:layout_constraintEnd_toEndOf="@+id/btnRegisterSale"
            app:layout_constraintStart_toStartOf="@+id/btnRegisterSale"
            app:layout_constraintTop_toBottomOf="@+id/btnRegisterSale" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
