<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        android:src="@drawable/wp_porschegt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
        android:layout_marginStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jairo Rios" />

        <TextView
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Empresa SAC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoresGeneral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/shapeableImageView"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="-1dp"
        android:background="@drawable/bg_scores_general"
        android:paddingVertical="10dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/totalMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text = "S/. 1400"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_total"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/numberSales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text = "15"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_sales"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vSaleHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/scoresGeneral"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_history" />
            <TextView
                android:layout_marginStart="16dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/option_history_sale" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>